# rag-experiment

./: .opensearch_model_id  LICENSE  README.md  pyproject.toml
opensearch-cluster/: docker-compose.yml
scripts/: run-experiment.ps1  run-experiment.sh  start-opensearch.sh  startup.ps1  startup.sh  stop-opensearch.ps1  stop-opensearch.sh  teardown.ps1  teardown.sh
src/: dataset_setup.py  opensearch_setup.py  qa_test_runner.py  query_hotels.py  query_ollama.py  query_wikipedia.py  test_data_setup.py
