[tool.poetry]
name = "rag-experiment"
version = "0.1.0"
authors = ["Abraham Linsenmayer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opensearch-py = "^3.1.0"
huggingface-hub = "^1.2.3"
datasets = "^4.4.2"
ollama = "^0.6.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
